feat: add rest api